force-app/main/default/objects/Fuel_Inventory__c/Fuel_Inventory__c.object-meta.xml
<CustomObject>
    <description>Manages fuel storage tank inventory including current volume, capacity, product type, and minimum threshold alerts at terminals and retail outlets.</description>
    <label>Fuel Inventory</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Inventory</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fuel Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>