force-app/main/default/objects/Fuel_Inventory__c/fields/Available_Volume__c.field-meta.xml
<CustomField>
    <fullName>Available_Volume__c</fullName>
    <label>Available Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>