force-app/main/default/objects/Fuel_Inventory__c/fields/Current_Volume__c.field-meta.xml
<CustomField>
    <fullName>Current_Volume__c</fullName>
    <label>Current Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>