force-app/main/default/objects/Fuel_Inventory__c/fields/Discrepancy_Flagged__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Flagged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discrepancy Flagged</label>
    <type>Checkbox</type>
</CustomField>