force-app/main/default/objects/Fuel_Inventory__c/fields/EIA_National_Stock__c.field-meta.xml
<CustomField>
    <fullName>EIA_National_Stock__c</fullName>
    <label>EIA National Stock Benchmark</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>