force-app/main/default/objects/Fuel_Inventory__c/fields/Gauge_Type__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Type__c</fullName>
    <label>Gauge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Radar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>