force-app/main/default/objects/Fuel_Inventory__c/fields/Last_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Receipt_Date__c</fullName>
    <label>Last Receipt Date</label>
    <type>Date</type>
</CustomField>