force-app/main/default/objects/Fuel_Inventory__c/fields/Last_Reconciliation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reconciliation_Date__c</fullName>
    <label>Last Reconciliation Date</label>
    <type>Date</type>
</CustomField>