force-app/main/default/objects/Fuel_Inventory__c/fields/Maximum_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Capacity__c</fullName>
    <label>Maximum Capacity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>