force-app/main/default/objects/Fuel_Inventory__c/fields/Minimum_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Threshold__c</fullName>
    <label>Minimum Threshold</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>