force-app/main/default/objects/Fuel_Inventory__c/fields/Retail_Outlet__c.field-meta.xml
<CustomField>
    <fullName>Retail_Outlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Outlet</label>
    <referenceTo>Retail_Outlet__c</referenceTo>
    <relationshipLabel>Fuel Inventories</relationshipLabel>
    <relationshipName>Fuel_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>