force-app/main/default/objects/Fuel_Inventory__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <label>Storage Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>