force-app/main/default/objects/Fuel_Inventory__c/fields/Tank_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Tank_Capacity__c</fullName>
    <label>Tank Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>