force-app/main/default/objects/Fuel_Inventory__c/fields/Tank_Number__c.field-meta.xml
<CustomField>
    <fullName>Tank_Number__c</fullName>
    <label>Tank Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>