force-app/main/default/objects/Fuel_Inventory__c/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terminal</label>
    <referenceTo>Terminal__c</referenceTo>
    <relationshipLabel>Fuel Inventories</relationshipLabel>
    <relationshipName>Fuel_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>