force-app/main/default/objects/Fuel_Inventory__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>bbls</fullName>
            </value>
            <value>
                <fullName>gallons</fullName>
            </value>
            <value>
                <fullName>MCF</fullName>
            </value>
            <value>
                <fullName>liters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>